# aoc-22

./: pyproject.toml
aoc22/: cli.py  utils.py
aoc22/01/: main.py
aoc22/02/: main.py
aoc22/template/: main.py
