[tool.poetry]
name = "aoc22"
version = "0.1.0"
description = ""
authors = ["Ula D. Beck <ula.beck@vimeo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^22.1.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc = "aoc22.cli:main"
